@startuml menus

class scenes.Menu {
	+ gui_group: pygame.sprite.Group
	+ go_back_button: gui.Button
	+ current_button: number
	+ buttons_len: number
	+ background: pygame.Surface
	+ disable_mouse: bool
	+ clicked_button: gui.Button

	+ Menu()
	+ setup()
	+ get_selected_button(): gui.Button
	+ previous_button():
	+ next_button():
	+ handle_events(events: list[pygame.Event])
	+ update(elapsed_time: number)
	+ draw(screen: pygame.Surface)
	- select_button(idx: number)
}

class scenes.VerticalMenu {
	+ VerticalMenu()
	+ handle_events(events: list[pygame.Event])
}

class scenes.HorizontalMenu {
	+ HorizontalMenu()
	+ handle_events(events: list[pygame.Event])
}

class scenes.StoryScene extends scenes.Scene {
	+ next_scene: Scene
	+ gui_group: pygame.sprite.Group

	+ StoryScene(title: string, argument: list[string], next_scene: Scene)
	+ setup()
	+ update(elapsed_time: number)
	+ handle_events(events: list[pygame.Event])
	+ draw(screen: pygame.Surface)
}

scenes.Menu -right-|> scenes.Scene

scenes.VerticalMenu -up-|> scenes.Menu
scenes.HorizontalMenu -up-|> scenes.Menu

scenes.Menu o--> "N" gui.Button
scenes.StoryScene o--> "N" gui.Text
scenes.Menu o--> "N" gui.Text

@enduml
